# penna

./: AGENTS.md  CHANGELOG.md  README.md  cliff.toml  flake.nix  package.json  shell.nix
.direnv/: nix-profile-26.11-7hlsbdxjq2mgczhl  nix-profile-26.11-7hlsbdxjq2mgczhl.rc
.github/workflows/: build.yml  release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/components/: confirm-dialog.svelte  context-menu-wrapper.svelte  file-finder.svelte  file-tree.svelte  input-dialog.svelte  markdown-editor.svelte  markdown-preview.svelte  settings-dialog.svelte  setup-dialog.svelte  tab-bar.svelte  which-key.svelte
src/lib/components/ui/context-menu/: context-menu-checkbox-item.svelte  context-menu-content.svelte  context-menu-item.svelte  context-menu-label.svelte  context-menu-radio-item.svelte  context-menu-sub-content.svelte  context-menu-sub-trigger.svelte
src/lib/editor/: markdown-completion.ts  setup.ts
src/lib/stores/: settings.ts  setup.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
